# kinect2pipe-IR

./: CMakeLists.txt  README.md  Restart-service-kde-desktop-shortcut.desktop  kinect2pipe_IR.cpp  kinect2pipe_IR.h  kinect2pipe_IR.service  main.cpp
contrib/systemd/: kinect2pipe.service  kinect2pipe_IR.service
